--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
+url: "https://proofgeneral.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,52 +14,58 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: Proof General
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Organize your proofs!
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
+  About: "about"
   Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+    - News: "news"
+    - Features: "features"
+    - Download: "download"
+    - Documentation: "doc"
+    - Screenshots: "screenshots"
+    - Development: "devel"
+    - Publications: "pubs"
+    - Related: "links"
+  GitHub: "https://github.com/ProofGeneral/PG/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/ProofGeneral-splash.png"
 
 # --- Footer options --- #
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
-  email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
-  linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
-  stackoverflow: yourlink  # eg. "3943160/daattali"
+  name: The PG dev team
+  #email: "youremail@domain.com"
+  #facebook: yourname  # eg. daattali
+  github: ProofGeneral
+  #twitter: yourname   # eg. daattali
+  #linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
+  #stackoverflow: yourlink  # eg. "3943160/daattali"
  
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
-  email: true
-  twitter: true
+  facebook: false #true
+  email: false #true
+  twitter: false #true
   github: true
   linkedin: false
   stackoverflow: false
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "ProofGeneral.github.io"
+# eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 
