--- a/_config.yml
+++ b/_config.yml
@@ -23,17 +23,18 @@ description: Organize your proofs!
 
 # List of links in the navigation bar
 navbar-links:
-  About: "about"
+  Home: ""
   Resources:
     - News: "news"
     - Features: "features"
     - Download: "download"
+    - GitHub repo: "https://github.com/ProofGeneral/PG/"
     - Documentation: "doc"
     - Screenshots: "screenshots"
     - Development: "devel"
     - Publications: "pubs"
     - Related: "links"
-  GitHub: "https://github.com/ProofGeneral/PG/"
+  About: "about"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
