--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,9 @@ navbar-links:
     - Development: "devel"
     - Publications: "pubs"
     - Related: "links"
-  About: "about"
+  About:
+    - About PG: "about"
+    - Authors: "AUTHORS"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
