--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ url-pretty: "ProofGeneral.github.io"
 timezone: "America/Vancouver"
 markdown: kramdown
 highlighter: rouge
-permalink: /:year-:month-:day-:title/
+permalink: /news/:year-:month-:day-:title/
 paginate: 5
 paginate_path: "/news/page:num/"
 
